# autonovel

./: .env.example  .gitignore  CLAUDE.md  DNS.md  README.md  RULES.md  UNIVERSE.md  adversarial_edit.py  build_arc_summary.py  build_epub.py  build_outline.py  build_paperback_cover.py  build_pdf.py  build_print_pdf.py  canon.md  characters.md  compare_chapters.py  draft_chapter.py  evaluate.py  gen_art.py  gen_art_directions.py  gen_audiobook_script.py  gen_canon.py  gen_characters.py  gen_outline.py  gen_outline_part2.py  gen_revision.py  gen_world.py  load-secrets.sh  manuscript.md  outline.md  pyproject.toml  reader_panel.py  results.tsv  review.py  reviews.md  run_pipeline.py  seed.py  seed.txt  state.json  (+2 more)
.claude/: launch.json
.imagegen/: cover-spec.yaml
.wolf/: OPENWOLF.md  anatomy.md  buglog.json  cerebrum.md  memory.md
asset-mcp/: .gcloudignore  Dockerfile  README.md  config.json  create_index.sh  deploy.sh  ingest.py  pyproject.toml  requirements.txt
asset-mcp/app/: enrich.py  generate.py  main.py  store.py
asset-mcp/brand/: spz_style.json
chapters/: ch_00.md  ch_01.md  ch_02.md  ch_03.md  ch_04.md  ch_05.md  ch_06.md  ch_07.md  ch_08.md  ch_09.md  ch_10.md  ch_11.md  ch_12.md  ch_13.md  ch_14.md  ch_15.md  ch_16.md  ch_17.md  ch_18.md  ch_19.md  ch_20.md  ch_21.md  ch_22.md  ch_23.md  ch_24.md  ch_25.md  ch_26.md  ch_27.md  ch_28.md  ch_coda.md
design/: cover.tex  epub.css  epub_kindle.css  preamble.tex  preamble_print.tex  sections.lua
docs/: BRANCHES.md  CATALOG.md  INFRASTRUCTURE.md  OPERATIONS.md
kdp/: cover.tex  epub-metadata.yaml  epub.css  interior.tex  metadata.md
linkedin/: build_li.py
publishing/: README.md  cli.py  config.json  config.yaml  deploy.sh  gen_feed.py  gen_site.py  make_cover.py  mcp.json
spz-brand-machine/: .env.example  .gitignore  README.md  RECOVERY.md  pyproject.toml
spz-brand-machine/deploy/: com.spacepiratezero.brandmachine.plist
spz-brand-machine/spz_brand_machine/: __init__.py  brand_voice.py  config.py  llm.py  login.py  orchestrator.py  safety.py  server.py  tick.py
spz-brand-machine/spz_brand_machine/connectors/: __init__.py  browser.py  meta.py  playwright_session.py  substack.py  substack_endpoints.py
standards/: AUDIOBOOK.md  BRAND.md  PUBLISHING.md  README.md  SOCIAL.md
substack/: PLAN.md  build_posts.py  preview_preamble.tex  push_substack.py  sample_day01.md  (+2 more)
(+986 files in other folders)
