[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spz-brand-machine"
version = "0.1.0"
description = "MCP server that runs the Space Pirate Zero brand internet-wide, no-touch, in SPZ voice."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
substack = ["python-substack>=0.1.5"]
browser = ["playwright>=1.44"]
all = ["python-substack>=0.1.5", "playwright>=1.44"]

[project.scripts]
spz-brand-machine = "spz_brand_machine.server:main"
spz-login = "spz_brand_machine.login:main"
spz-tick = "spz_brand_machine.tick:main"

[tool.hatch.build.targets.wheel]
packages = ["spz_brand_machine"]
